--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ a {
 
 
 
-.research-body, .talks-body, .conf-body, .teaching-body {
+.research-body, .talks-body, .activities-body, .teaching-body {
 	margin: 5%;
 	margin-top: 0px;
 }
