--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,25 @@ a {
 	font-size: 18pt;
 }
 
+.topologie {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: 40% 20% 40%;
+	margin: 0px;
+}
+
+.section-topologie	{
+	text-justify: center;
+	margin-bottom: 0%;
+	padding: 3%;
+
+}
+
+/*.section-topologie-list {
+	list-style-type: none;
+	margin: 3%;
+}
+*/
 
 /*begin display options*/
 
@@ -201,6 +220,12 @@ a {
 	.links, .contacts {
 	margin: 3%;
 	justify-self: start;
+}
+	.topologie {
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows: 20% 30% 10% 10% 30%;
+	margin: 0px;
 }
 
 }
@@ -283,24 +308,7 @@ a {
 }
 }
 
-.topologie {
-	display: grid;
-	grid-template-columns: 50% 50%;
-	grid-template-rows: 40% 20% 40%;
-	margin: 0px;
-}
 
-.section-topologie	{
-	text-justify: center;
-	margin-bottom: 0%;
-	padding: 3%;
-
-}
-
-.section-topologie-list {
-	list-style-type: none;
-	margin: 3%;
-}
 /* end display options*/
 
 
